# PokeBoring

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/txt/: trainer_first_names.txt  trainer_last_names.txt
include/: battle.hpp  curlHelpers.hpp  encounter.hpp  levelMechanics.hpp  move.hpp  playerCharacter.hpp  poke.hpp  pokeDataFetcher.hpp  random.hpp  screenManager.hpp  stats.hpp  textRenderer.hpp  trainer.hpp  window.hpp
src/: battle.cpp  curlHelpers.cpp  encounter.cpp  levelMechanics.cpp  main.cpp  move.cpp  playerCharacter.cpp  poke.cpp  pokeDataFetcher.cpp  random.cpp  screenManager.cpp  stats.cpp  textRenderer.cpp  trainer.cpp  window.cpp
